*Empty MediaWiki Message*

--- a/Gimalaýlar.mw
+++ b/Gimalaýlar.mw
@@ -1,4 +1,4 @@
-'''Gimalaýlar''' ({{lang-sa|हिमालय}}, {{IAST|himālaya}}, "garly mesgen", {{lang-hi|हिमालय}}, {{lang-ne|हिमालय}}, {{lang-zh|喜馬拉雅山脈}})  [[Ýer]]iň iň beýik [[dag ulgamy]]. Gimalaýlar [[Tibet dagy]] (demirgazykda) bilen  [[Hindi-Gang tekizligi]]niň (günortada) arasynda ýerleşýär.
+'''Gimalaýlar''' ({{lang-sa|हिमालय}}, {{IAST|himālaya}}, "garly mesgen", {{lang-hi|हिमालय}}, {{lang-ne|हिमालय}}, {{lang-zh|喜馬拉雅山脈}})  [[Ýer]]iň iň beýik [[dag ulgamy]]. Gimalaýlar [[Tibet dagy]] (demirgazykda) bilen  [[Hindi-Gang tekizligi]]niň (günortada) aralygynda ýerleşýär.
 
 Gimalaý daglary [[Hindistan]]yň, [[Nepal]]yň, [[Hytaý]]ýň (Tibet), [[Pakistan]]yň, [[Butan]]yň territoriýalaryna ýaýylyp gidýär.
 
