*Empty MediaWiki Message*

--- a/Gimalaýlar.mw
+++ b/Gimalaýlar.mw
@@ -2,8 +2,10 @@
 
 Gimalaý daglary [[Hindistan]]yň, [[Nepal]]yň, [[Hytaý]]ýň (Tibet), [[Pakistan]]yň, [[Butan]]yň territoriýalaryna ýaýylyp gidýär.
 
-[[Kategoriýa:Gimalaýlar]]
+[[Kategoriýa:Aziýanyň dag ulgamlary]]
 [[Kategoriýa:Elipbiý boýunça dag ulgamlary]]
+[[Kategoriýa:Gimalaýlar]]
+
 
 [[af:Himalaja]]
 [[als:Himalaya]]
@@ -83,6 +85,7 @@ Gimalaý daglary [[Hindistan]]yň, [[Nepal]]yň, [[Hytaý]]ýň (Tibet), [[Pakis
 [[pt:Himalaia]]
 [[qu:Himalaya]]
 [[ro:Himalaya]]
+[[ru:Гималаи]]
 [[sa:हिमालय]]
 [[sah:Хималайа]]
 [[scn:Himalaya]]
