*Empty MediaWiki Message*

--- a/Abiturient.mw
+++ b/Abiturient.mw
@@ -1,5 +1,7 @@
 '''Abiturient''' (latynça: abituriens - gitmäge taýynlanýan) - 1) birnäçe döwletlerde orta kouw jaýyny gutaran, orta bilim hakynda attestat alan adam; 2) SSSR-de 50-nji ýyllaryň ahyryndan başlap ýokary hem ýörite orta okuw jaýlaryna okuwa girmek üçin ekzamen berýänler.
 
+[[Kategoriýa:Ýokary bilim]]
+
 [[de:Abitur]]
 [[en:Abitur]]
 [[eo:Abituro]]
