*Empty MediaWiki Message*

--- a/Abul_Ala_Al-Marry.mw
+++ b/Abul_Ala_Al-Marry.mw
@@ -1,4 +1,6 @@
-'''Abul Ala Al-Marry''' ([[Arapça]]:أبو العلاء أحمد بن عبد الله بن سليمان التنوخي المعري) serediň ''[[Maarry Abul ala]]''.
+'''Maarri''', '''al-Maarri''', '''Ebu-l-Ala Ahmed ibn Abdullah ibn Süleýman at-Tanuhi''', '''Ebul ala al Maari''', '''Ahmed bin Abdullah bin Süleýman''' (Abu l-’Alâ al-Ma’arrî; {{lang-ar|أبو العلاء أحمد بن عبد الله بن سليمان التنوخي المعري}} [[973]], Maarret-en-Numan şäheri, Siriýa — [[1057]] ýa-da [[1058]], şol ýerde) — [[arap]] [[şahyr]]y, [[filosof]]y we [[filolog]]y.
+
+[[Kategoriýa:Arap şahyrlary]]
 
 [[ar:أبو العلاء المعري]]
 [[cy:Abu al-Ala al-Ma'arri]]
