*Empty MediaWiki Message*

--- a/Töwriz.mw
+++ b/Töwriz.mw
@@ -1,4 +1,4 @@
-[[Faýl:Maqbaratoshoara02.jpg|thumb|right|220px|]]
+[[Faýl:Tabriz profile.jpg|thumb|right|220px|]]
 [[Faýl:Tabriz bazaar 012008.jpg|thumb|right|220px|Tabriz bazari]]
 '''Tabriz''' - [[Eýran]]da yerlesen bir saherdir.
 
