*Empty MediaWiki Message*

--- a/Kastamonu_uniwersiteti.mw
+++ b/Kastamonu_uniwersiteti.mw
@@ -6,3 +6,10 @@ Tutýan meýdany 50 gektar, tokaýynyň meýdany bolsa 37 gektara barabardyr.
 [[Kategoriýa:Türkiýe]]
 
 [[Category:Kastamonudaky uniwersitetler]]
+
+[[az:Kastamonu Universiteti]]
+[[de:Kastamonu Üniversitesi]]
+[[en:Kastamonu University]]
+[[fr:Université de Kastamonu]]
+[[it:Università di Kastamonu]]
+[[tr:Kastamonu Üniversitesi]]
