*Empty MediaWiki Message*

--- a/Uniwersitet.mw
+++ b/Uniwersitet.mw
@@ -5,6 +5,7 @@
 ** [[Bogaziçi]]
 ** [[ODTU]]
 ** [[Stambul tehniki uniwersiteti]]
+** [[Kastamonu Uniwersiteti]]
 ** [[Marmara]]
 ** [[Istanbul]]
 ** [[Ankara]]
