Mazmun '#YÖNLENDİR [[Kastamonu Uniwersiteti]]' bilen çalşyryldy

--- a/Kastamonu_uniwersiteti.mw
+++ b/Kastamonu_uniwersiteti.mw
@@ -1,15 +1,1 @@
-'''Kastamonu uniwersiteti''' ([[türkçe]]:''Kastamonu Üniversitesi''), gysgaça '''KASU''' ([[Türkçe]]: ''KASÜ''), [[2006]]-njy ýylyňda [[Kastamonu]]da düýbi tutulan döwlet uniwersiteti. Häzirki döwürde, [[Türkiýe]]de iň gowy uniwersitetlerin biri hasap edilýär.
-Tutýan meýdany 50 gektar, tokaýynyň meýdany bolsa 37 gektara barabardyr. 
-
-* [http://www.kastamonu.edu.tr Kastamonu uniwersitet Baş Sahypa]
-
-[[Kategoriýa:Türkiýe]]
-
-[[Category:Kastamonudaky uniwersitetler]]
-
-[[az:Kastamonu Universiteti]]
-[[de:Kastamonu Üniversitesi]]
-[[en:Kastamonu University]]
-[[fr:Université de Kastamonu]]
-[[it:Università di Kastamonu]]
-[[tr:Kastamonu Üniversitesi]]
+#YÖNLENDİR [[Kastamonu Uniwersiteti]]
