--- a/Kastamonu_Uniwersiteti.mw
+++ b/Kastamonu_Uniwersiteti.mw
@@ -1,4 +1,4 @@
-'''Kastamonu uniwersiteti''' ([[türkçe]]:''Kastamonu Üniversitesi''), gysgaça '''KASU''' ([[Türkçe]]: ''KASÜ''), [[2006]]-njy ýylyňda [[Kastamonu]]da düýbi tutulan döwlet uniwersiteti. Häzirki döwürde, [[Türkiýe]]de iň gowy uniwersitetlerin biri hasap edilýär.
+'''Kastamonu uniwersiteti''' ([[Türkçe]]:''Kastamonu Üniversitesi''), gysgaça '''KASU''' ([[Türkçe]]: ''KASÜ''), [[2006]]-njy ýylyňda [[Kastamonu]]da düýbi tutulan döwlet uniwersiteti. Häzirki döwürde, [[Türkiýe]]de iň gowy uniwersitetlerin biri hasap edilýär.
 Tutýan meýdany 50 gektar, tokaýynyň meýdany bolsa 37 gektara barabardyr. 
 
 * [http://www.kastamonu.edu.tr Kastamonu uniwersitet Baş Sahypa]
