*Empty MediaWiki Message*

--- a/Belgrad_Tokaýy.mw
+++ b/Belgrad_Tokaýy.mw
@@ -1,4 +1,4 @@
-[[Şəkil:Belgradormani2.jpg|thumb|250px|Belqrad Meşəsi]]
+[[Image:Belgradormani2.jpg|thumb|250px|Belqrad Meşəsi]]
 
 '''Belgrad Tokaýy''' ([[Türkçe]]: ''Belgrad Ormanı'') [[Türkiýä]]niň iň iri şäheri [[Stambul]]un demirgazygynda 5,500 hektarlyk tebigy tokaý.
 
