*Empty MediaWiki Message*

--- a/Moskwa_Halkara_Iş_Merkezi.mw
+++ b/Moskwa_Halkara_Iş_Merkezi.mw
@@ -1,2 +1,23 @@
 [[File:Moskwa_Halkara_Iş_Merkezi.jpg|thumb|Moswa Halkara Iş Merkezi]]
 '''Moskwa Halkara Iş Merkezi'''
+
+[[af:Moskva-Siti]]
+[[bg:Москва Сити]]
+[[cs:Moskva-Siti]]
+[[de:Moskau City]]
+[[en:Moscow International Business Center]]
+[[es:Centro Internacional de Negocios de Moscú]]
+[[eu:Moskuko Nazioarteko Finantza Gunea]]
+[[fr:Moskva-City]]
+[[he:מוסקבה סיטי]]
+[[it:Centro internazionale di affari di Mosca]]
+[[ja:モスクワ・シティ]]
+[[ka:მოსკოვი-სიტი]]
+[[nl:Moscow-City]]
+[[nn:Moskva City]]
+[[pl:Moskiewskie Międzynarodowe Centrum Biznesowe]]
+[[pt:Centro Internacional de Negócios de Moscou]]
+[[sk:Moskovskij Meždunarodnyj Delovoj Centr „Moskva-Siti“]]
+[[sv:Moscow International Business Center]]
+[[tr:Moskova Uluslararası İş Merkezi]]
+[[ru:Москва-сити]]
