*Empty MediaWiki Message*

--- a/Moskwa_Halkara_Iş_Merkezi.mw
+++ b/Moskwa_Halkara_Iş_Merkezi.mw
@@ -1,5 +1,5 @@
 [[File:Moskwa_Halkara_Iş_Merkezi.jpg|thumb|Moswa Halkara Iş Merkezi]]
-'''Moskwa Halkara Iş Merkezi'''
+'''Moskwa Halkara Iş Merkezi''' ([[Rusça]]: Московский международный деловой центр / Moskowskiý meždunarodnyý delowoý tsentr)
 
 [[af:Moskva-Siti]]
 [[bg:Москва Сити]]
