*Empty MediaWiki Message*

--- a/Moskwa_Halkara_Iş_Merkezi.mw
+++ b/Moskwa_Halkara_Iş_Merkezi.mw
@@ -1,6 +1,26 @@
 [[File:Moskwa_Halkara_Iş_Merkezi.jpg|thumb|Moswa Halkara Iş Merkezi]]
 '''Moskwa Halkara Iş Merkezi''' ([[Rusça]]: Московский международный деловой центр / Moskowskiý meždunarodnyý delowoý tsentr)
 
+== Jaýlar ==
+== Layout ==
+{{Düzenle-tr|Kasım 2009}}
+* '''0''' — Tower 2000
+* '''1''' — Expo center
+* '''2,3''' — Wedding Palace
+* '''4''' — Imperia Tower
+* '''6,7,8''' — Central Gallery
+* '''''' — City of Capitals
+* '''10''' — Naberezhnaya Tower
+* '''11''' — Transport Terminal
+* '''12''' — Eurasia Tower
+* '''13''' — Federation Tower
+* '''14''' — Mercury City Tower
+* '''15''' — City Hall and City Duma
+* '''16''' — Office-Hotel space
+* '''17,18''' — Russia Tower
+* '''19''' — Northern Tower
+* '''20''' — Exhibition business complex
+
 [[af:Moskva-Siti]]
 [[bg:Москва Сити]]
 [[cs:Moskva-Siti]]
