--- a/Moskwa_Halkara_Iş_Merkezi.mw
+++ b/Moskwa_Halkara_Iş_Merkezi.mw
@@ -21,7 +21,7 @@
 * '''20''' — Exhibition business complex
 
 == Links ==
-*[[http://www.citynext.ru/ "Moskwa-siti"]]
+*[http://www.citynext.ru/ "Moskwa-siti"]
 
 [[af:Moskva-Siti]]
 [[bg:Москва Сити]]
