--- a/Moskwa_Halkara_Iş_Merkezi.mw
+++ b/Moskwa_Halkara_Iş_Merkezi.mw
@@ -8,7 +8,7 @@
 * '''2,3''' — Wedding Palace
 * '''4''' — Imperia Tower
 * '''6,7,8''' — Central Gallery
-* '''''' — City of Capitals
+* '''9''' — City of Capitals
 * '''10''' — Naberezhnaya Tower
 * '''11''' — Transport Terminal
 * '''12''' — Eurasia Tower
