--- a/Aşgabat.mw
+++ b/Aşgabat.mw
@@ -26,6 +26,7 @@ Hojalygyn ýoriteleshdirilen ugurlary-uzumjilik, miwejilik, kartoşka, gok we ba
 * [[Türkmen döwlet ulag we aragatnaşyk instituty]]
 * [[Türkmen milli konserwatoriýasy]]
 * [[Halkara türkmen-türk uniwersiteti]]
+* [[I.M. Gubkin adyndaky Russiýa Döwlet nebit we gaz uniwersitetiniň Aşgabat şäherindäki Şahamçasy]]
 
 == Dogan şäherleri ==
 * [[Faýl:Flag of the United States.svg|30px|ABŞ Bayrağı]] [[Albuquerque, New Mexico]], [[ABŞ]]
