*Empty MediaWiki Message*

--- a/Moskwa_Halkara_Iş_Merkezi.mw
+++ b/Moskwa_Halkara_Iş_Merkezi.mw
@@ -1,4 +1,6 @@
-[[File:Moskwa_Halkara_Iş_Merkezi.jpg|thumb|Moswa Halkara Iş Merkezi]]
+[[File:Moskwa_Halkara_Iş_Merkezi.jpg|thumb|Moskwa Halkara Iş Merkezi]]
+[[File:Moscow International Business Centre, Marc 2008.JPG|thumb|Moswa Halkara Iş Merkezi gijede (Mart 2008)]]
+[[File:Moscow-City 28-03-2010 2.jpg|thumb|Moskwa siti (Mart 2010)]]
 '''Moskwa Halkara Iş Merkezi''' ([[Rusça]]: Московский международный деловой центр / Moskowskiý meždunarodnyý delowoý tsentr) - [[Moskwa]] şaherinde yerleşyar.
 
 == Jaýlar ==
