--- a/Rubin_futbol_kluby.mw
+++ b/Rubin_futbol_kluby.mw
@@ -1,8 +1,7 @@
 '''Rubin Futbol Topary''', [[Kazan]]da yerleşyar. Hazirki wagtda [[Russiýa Premýer Liga]]da basleşige dowam edyar. Olar 30,133 orunlyk [[Tsentralnyý Stadiony]]nda oyunlaryny geçiryar.
 
 == Links ==
-== Ссылки ==
-* [http://rubin-kazan.ru/main/ Rubin Kazan saýty]
+* [http://rubin-kazan.ru/main/ Rubin Kazan saýty]{{Ru icon}}
 
 [[ar:نادي روبين كازان]]
 [[az:Rubin (Kazan)]]
