*Empty MediaWiki Message*

--- a/Rubin_futbol_kluby.mw
+++ b/Rubin_futbol_kluby.mw
@@ -1,4 +1,4 @@
-'''Rubin Futbol Topary''', [[Kazan]]da yerleşyar. Hazirki wagtda [[Russiýa Premýer Liga]]da basleşige dowam edyar. Olar 30,133 orunlyk [[Tsentralnyý Stadiony]]nda oyunlaryny geçiryar.
+'''Rubin Futbol Topary''', [[Kazan]]da yerleşyar. Hazirki wagtda [[Russiýa Premýer Liga]]da basleşige dowam edyar. Olar 30,133 orunlyk [[Tsentralnyý Stadiony]]nda oyunlaryny geçiryar. Baş tälimçisi, wisa prezidenti - [[Gurban Berdiýew]]
 
 == Links ==
 * [http://rubin-kazan.ru/main/ Rubin Kazan saýty] (rusça)
