*Empty MediaWiki Message*

--- a/Russiýa_Premýer_Liga.mw
+++ b/Russiýa_Premýer_Liga.mw
@@ -1,4 +1,4 @@
-'''Russiýanyň Premýer Ligasy''' Russiýa Futbol Federasiýasy tarapyndan guralýan futbol bäsleşigidir. Ol [[1992]]-nji ýylda döredildi.
+'''Russiýanyň Premýer Ligasy''' - [[Russiýa]] [[Futbol]] Federasiýasy tarapyndan guralýan futbol bäsleşigidir. Ol [[1992]]-nji ýylda döredildi.
 
 == Russiýanyn çempionlar ==
 {{col-begin-small}}
