--- a/Russiýa_Premýer_Liga.mw
+++ b/Russiýa_Premýer_Liga.mw
@@ -1,5 +1,29 @@
 '''Russiýanyň Premýer Ligasy''' - [[Russiýa]] [[Futbol]] Federasiýasy tarapyndan guralýan futbol bäsleşigidir. Ol [[1992]]-nji ýylda döredildi.
 
+== 2011 sezonyň toparlary ==
+2011 sezonynda ligade şu toparlar oýnoýa:
+{| valign=top 
+|-
+|valign=top|
+* [[Kuban Krasnodar]]
+* [[FK Amkar Perm]]
+* [[SSKA Moskwa]]
+* [[Dinamo Moskwa]]
+* [[Anži Mahaçkala]]
+* [[Krilýa Sowetow]]
+* [[Lokomotiw Moskwa]]
+* [[FK Rostow]]
+|valign=top|
+* [[Rubin Kazan FK]]
+* [[Wolga Nižniý Nowgorod]]
+* [[Krasnodar FK]]
+* [[Spartak Moskwa]]
+* [[PFK Spartak Nalçik]]
+* [[FK Terek Groznyý]]
+* [[Tom Tomsk]]
+* [[Zenit]]
+|}
+
 == Russiýanyn çempionlar ==
 {{col-begin-small}}
 {{col-5}}
