--- a/Russiýa_Premýer_Liga.mw
+++ b/Russiýa_Premýer_Liga.mw
@@ -47,3 +47,40 @@
 *2008 [[Rubin]] Kazan
 *2009 [[Rubin]] Kazan
 *2010 Zenit Sankt-Peterburg
+
+== Links ==
+* [http://www.rfpl.org/ Russiýa liganyň saýty]
+[[bg:Руска Премиер Лига]]
+[[ca:Lliga russa de futbol]]
+[[cs:Ruská Premier Liga]]
+[[cv:Раççей футбол чемпионачĕ]]
+[[de:Premjer-Liga]]
+[[el:Πρωτάθλημα ποδοσφαίρου Ρωσίας]]
+[[en:Russian Premier League]]
+[[es:Liga Premier de Rusia]]
+[[et:Premjer Liga]]
+[[fa:لیگ برتر روسیه]]
+[[fi:Venäjän valioliiga]]
+[[fr:Championnat de Russie de football]]
+[[he:ליגת העל הרוסית]]
+[[hr:Ruska Premijer liga]]
+[[hu:Orosz labdarúgó-bajnokság (első osztály)]]
+[[id:Liga Utama Rusia]]
+[[it:Campionato russo di calcio]]
+[[ja:ロシアサッカー・プレミアリーグ]]
+[[ko:러시아 프리미어리그]]
+[[kv:Роч Премьер-Лига]]
+[[lt:Rusijos Premjer lyga]]
+[[lv:Krievijas futbola Premjerlīga]]
+[[nl:Premjer-Liga]]
+[[no:Russisk toppserie i fotball]]
+[[pl:Priemjer-Liga]]
+[[pt:Campeonato Russo de Futebol]]
+[[ro:Prima Ligă Rusă]]
+[[simple:Russian Premier League]]
+[[sr:Премијер лига Русије у фудбалу]]
+[[sv:Ryska Premier League]]
+[[tr:Rusya Premier Ligi]]
+[[tt:Русиянең Футбол Премьер-Лигасы]]
+[[uk:Чемпіонат Росії з футболу]]
+[[zh:俄羅斯足球超級聯賽]]
