--- a/Arheologiýa.mw
+++ b/Arheologiýa.mw
@@ -1,5 +1,5 @@
 Gazuw-agtaryş işleri bilen gyzyklanyan bilim ugrydyr.
-
+* [http://ice.tsu.ru/index.php?option=com_content&view=category&layout=blog&id=22&Itemid=91 Наталия Рудая. ПАЛИНОЛОГИЧЕСКИЙ АНАЛИЗ(учебно-методическое пособие для археологов)]
 [[Kategoriýa:Arheologiýa]]
 
 [[af:Argeologie]]
