*Empty MediaWiki Message*

--- a/Sesar_Nawas.mw
+++ b/Sesar_Nawas.mw
@@ -1,2 +1,2 @@
-[[Файл:CésarNavas.jpg|thumb|220px|Nawas Rubin-da]]
+[[File:CésarNavas.jpg|thumb|220px|Nawas Rubin-da]]
 '''Sesar Gonsales Nawas''' ({{lang-es|César González Navas}}; [[14 fewral]] [[1980]], [[Madrid]]) — [[Ispaniýa|ispan]] [[futbol]]çy, «[[Rubin Kazan FK]]» oýnoýa.
