--- a/Türkmenistanyň_milli_futbol_ýygyndysy.mw
+++ b/Türkmenistanyň_milli_futbol_ýygyndysy.mw
@@ -1,5 +1,8 @@
 Türkmenistanyň Milli Futbol Ýygyndysy - [[Türkmenistan]]yň milli futbol topragy. [[Saparmyrat Türkmenbaşy adyndaky Olimpiýa Stadiony]]nda oyunlaryny geçiryar. Baş tälimçisi - [[Ýazguly Hojageldiýew]].
 
+[[File:North_Korea-Pyongyang-Kim_Il-Sung_Stadium-Football_game_with_Turkmenistan-02.jpg|thumb|Türkmenistan we [[Demirgazyk Koreýa]] bilen oýunynda]]
+[[File:North Korea-Pyongyang-Kim Il-Sung Stadium-Football game with Turkmenistan-01.jpg|thumb|Türkmenistanyň Milli Futbol Ýygyndysy Phenýanda]]
+
 [[ar:منتخب تركمانستان لكرة القدم]]
 [[az:Türkmənistan milli futbol komandası]]
 [[de:Turkmenische Fußballnationalmannschaft]]
