*Empty MediaWiki Message*

--- a/Saparmyrat_Türkmenbaşy_adyndaky_Olimpiýa_Stadiony.mw
+++ b/Saparmyrat_Türkmenbaşy_adyndaky_Olimpiýa_Stadiony.mw
@@ -1,2 +1,9 @@
 Saparmyrat Türkmenbaşy adyndaky Olimpiýa Stadiony
-[[Faýl:Turkmen stadiyony.jpg|thumb|]]
+[[Faýl:Turkmen stadiyony.jpg|thumb|Olimpiýa Stadiony]]
+
+[[ar:ملعب أولمبي (عشق آباد)]]
+[[en:Olympic Stadium (Ashgabat)]]
+[[es:Estadio Olímpico de Asjabad]]
+[[fr:Stade olympique d'Achgabat]]
+[[it:Stadio Olimpico di Ashkhabad]]
+[[pt:Ashkhabad Olympic Stadium]]
