*Empty MediaWiki Message*

--- a/Saparmyrat_Türkmenbaşy_adyndaky_Olimpiýa_Stadiony.mw
+++ b/Saparmyrat_Türkmenbaşy_adyndaky_Olimpiýa_Stadiony.mw
@@ -1,4 +1,4 @@
-Saparmyrat Türkmenbaşy adyndaky Olimpiýa Stadiony
+'''Saparmyrat Türkmenbaşy adyndaky Olimpiýa Stadiony''' - [[Aşgabat]] şaherinde yerleşyar.
 [[Faýl:Turkmen stadiyony.jpg|thumb|Olimpiýa Stadiony]]
 
 [[ar:ملعب أولمبي (عشق آباد)]]
