*Empty MediaWiki Message*

--- a/Ruslan_Mingazow.mw
+++ b/Ruslan_Mingazow.mw
@@ -1,2 +1,10 @@
 [[File:Ruslans Mingazovs.jpg|thumb|220px|Mingazow Skontoda]]
-'''Ruslan Kamilýewiç Mingazow''' ({{lang-ru|Руслан Мингазов}}; [[23 noýabr]] [[1990]], [[Aşgabat]]) — [[Türkmenistan|türkmen]] [[futbol]]çy, «[[Skonto Riga FK]]» oýnoýa.
+'''Ruslan Kamilýewiç Mingazow''' (Руслан Мингазов; [[23 noýabr]] [[1990]], [[Aşgabat]]) — [[Türkmenistan|türkmen]] [[futbol]]çy, «[[Skonto Riga FK]]» oýnoýa.
+
+[[de:Ruslan Mingazov]]
+[[fr:Ruslan Mingazov]]
+[[lv:Ruslans Mingazovs]]
+[[ja:ルスラン・ミンガゾフ]]
+[[pt:Ruslan Mingazov]]
+[[ru:Мингазов, Руслан Камильевич]]
+[[sv:Ruslan Mingazov]]
