*Empty MediaWiki Message*

--- a/Türkmenistanyň_Futbol_federasiýasy.mw
+++ b/Türkmenistanyň_Futbol_federasiýasy.mw
@@ -5,7 +5,7 @@
   Region             = [[Aziýa Futbol Konfederasiýasy|AFC]] |
   Region kabul = 1994 |
   Prezident          = Aman Ýusupow |
-  Talimci            = [[Rahym Gurbanmämmedow]] |
+  Talimci            = [[Yazguly Hojageldiýew]] |
 }}
 
 
