*Empty MediaWiki Message*

--- a/Ýewropa.mw
+++ b/Ýewropa.mw
@@ -1,7 +1,7 @@
-[[Faýl:Europe satellite orthographic.jpg|right|450px]]
-[[Faýl:Simplified Languages of Europe map.svg|thumb|250px|right|]]
-[[Faýl:Grossgliederung Europas.png|thumb|300px|]]
-[[Faýl:First.Crusade.Map.jpg|thumb| [[1000]].]]
+[[Faýl:Europe satellite orthographic.jpg|right|250px|Ýewropa]]
+[[Faýl:Rectified Languages of Europe map.png|thumb|250px|right|]]
+[[Faýl:Grossgliederung Europas.png|thumb|250px|]]
+[[Faýl:First.Crusade.Map.jpg|thumb|250px|[[1000]].]]
 
 
 '''Ýewropa''' — alty sany [[dünýä bölegi|dünýä böleginiň]] biri bolup, ol [[Aziýa]] bilen bilelikde [[Ýewraziýa]] [[materik|materigini]] emele getirýär, meýdany 10,5 mln km² töweregi.
