*Empty MediaWiki Message*

--- a/Ýewropa.mw
+++ b/Ýewropa.mw
@@ -1,4 +1,4 @@
-[[Faýl:Europe satellite orthographic.jpg|right|250px|Ýewropa]]
+[[Faýl:Europe satellite orthographic.jpg|thumb|right|250px|Ýewropa]]
 [[Faýl:Rectified Languages of Europe map.png|thumb|250px|right|]]
 [[Faýl:Grossgliederung Europas.png|thumb|250px|]]
 [[Faýl:First.Crusade.Map.jpg|thumb|250px|[[1000]].]]
