r2.6.5) (robot goşdy: [[kk:Панама каналы]]

--- a/Panama_kanaly.mw
+++ b/Panama_kanaly.mw
@@ -49,6 +49,7 @@
 [[ja:パナマ運河]]
 [[jv:Terusan Panama]]
 [[ka:პანამის არხი]]
+[[kk:Панама каналы]]
 [[km:ព្រែកជីកប៉ាណាម៉ា]]
 [[kn:ಪನಾಮ ಕಾಲುವೆ]]
 [[ko:파나마 운하]]
