*Empty MediaWiki Message*

--- a/Ukraina.mw
+++ b/Ukraina.mw
@@ -2,7 +2,7 @@
 
 '''Ukraina''' ({{lang-uk|Україна}} {{IPA|[ukrɑˈjinɑ]}}) — [[Gündogar Ýewropa]]da [[döwlet]]. Günortada onuň serhetlerini [[Gara deňiz]] we [[Azow deňzi]] ýuwýar, ol gündogarda we demirgazyk-gündogarda — [[Russiýa]], demirgazykda — [[Belarus]], günbatarda — [[Polşa]], [[Slowakiýa]] we [[Wengriýa]], günorta-günbatarda — [[Rumyniýa]] we [[Moldawiýa]] bilen serhetleşýär.
 
-Ýurduň paýtagty we iň iri şäheri — [[Kiýew]].
+Ýurduň paýtagty we iň iri şäheri — [[Kyýiw]].
 
 {{Ýewropanyň ýurtlary}}
 
