/* Türkmenfilm internet saýtlary: */

--- a/Türkmen_film.mw
+++ b/Türkmen_film.mw
@@ -2,6 +2,6 @@
  
 ==Türkmenfilm internet saýtlary:==
 
-* [[tmfiles.ucoz.com]] - bu saýtda türkmen filmlerini görüp we indirip bilersiňiz.
+* [[http://www.tmfiles.ucoz.com TmFiles]] - bu saýtda türkmen filmlerini görüp we indirip bilersiňiz.
 
-* [[turkmenkino.com]] - bu saýtda türkmen filmlerini indirip bilersiňiz.
+* [[http://www.turkmenkino.com Türkmen Kino]] - bu saýtda türkmen filmlerini indirip bilersiňiz.
