--- a/XML.mw
+++ b/XML.mw
@@ -1,7 +1,7 @@
 [[Faýl:Xml.PNG|300px|thumb|right|XML]]
 '''XML''' - (The Extensible Markup Language): umumy maksatly yşaratlama dilini gelişdirmek üçin spesifikasiýadyr. Bu diliň kömegi bilen öz elementleriňizi gelişdirip bilersiňiz, bu sebäpli hem extensible dil diýilyär. XML'iň kömegi bilen ilki bilen dokumentler we datalar kodlanýar we ''serialize'' edilýär, soňra bolsa ähli informatsiya sistemalarynyň, esasan hem internediň üstü bilen bu informatsiýa paýlaşylýar.
 <p>XML- '''WWC''' (Bütündünýä korsortium) tarapyndan hödürlenýän mugt açyk standartdyr.</p>
-
+<heat> iska-1993@inbox.ru <heat>
 [[af:XML]]
 [[ar:لغة الرقم القابلة للامتداد]]
 [[az:XML]]
