r2.6.5) (robot üýtgetdi: [[mhr:Венгрий]]

--- a/Wengriýa.mw
+++ b/Wengriýa.mw
@@ -114,7 +114,7 @@
 [[ltg:Vengreja]]
 [[lv:Ungārija]]
 [[mdf:Венгеронь мастор]]
-[[mhr:Веҥгрий]]
+[[mhr:Венгрий]]
 [[mi:Hanekeria]]
 [[mk:Унгарија]]
 [[ml:ഹംഗറി]]
