--- a/Sankt-Peterburg.mw
+++ b/Sankt-Peterburg.mw
@@ -1,5 +1,5 @@
 [[Faýl:WinterPalace.jpg|thumb|250px|Döwlet Ermitažy]]
-
+[[Faýl:Flag of Saint Petersburg Russia.svg|thumb|Sankt-Peterburgyň baýdagy]]
 '''Sankt-Peterburg''' — [[Russiýa Federasiýasy]]nda şäher.
 
 [[Kategoriýa:Russiýa Federasiýasynyň şäherleri]]
